# picoGPT

./: .gitignore  README.md  README_PYTORCH.md  README_TENSORFLOW.md  bench.py  export_vocab_to_runtime.py  list_litetrt_ops.py  pyproject.toml  quantization.py  quantize_pico.py  sample.py  sample_pico.py  sample_pico_int8.py  tf_convert_to_tflite.py  tf_data.py  tf_sample.py  tf_sample_tflite.py  tf_train.py  train.py  train_pico.py
.claude/: settings.local.json
config/: train_pico_graham_char.py  train_pico_shakespeare_char.py
data/graham_char/: prepare.py
data/shakespeare_tiny_bpe/: prepare.py
data/tinystories_tiny_bpe/: README.md  prepare.py
model/: pico_model.py  pico_model_int8.py
test/: cimv3_smoke_test.py
tf_config/: train_pico_shakespeare_char.py  train_sub_pico_shakespeare_char.py  train_sub_pico_shakespeare_tiny_bpe.py  train_sub_pico_tinystories_tiny_bpe.py
tf_model/: __init__.py  config.py  layers.py  model.py
