[project]
name = "pico-gpt-quantized"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "tqdm",
    "matplotlib",
    "tiktoken",
    "html2text>=2024.2.26",
    "tensorflow>=2.13.1",
]

[tool.uv]
dev-dependencies = [
    "wandb>=0.15.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0"
]
